# mkcert2

./: Cargo.toml  LICENSE  README.md  justfile
src/: main.rs  prompt.rs
