[package]
name = "mkcert2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
argh = "0.1.12"
dialoguer = { version = "0.11.0", features = ["completion"] }
dirs = "5.0.1"
fastrand = "2.0.1"
indicatif = "0.17.7"
names = "0.14.0"
parse_duration = "2.1.1"
rand = "0.8.5"
rcgen = { version = "0.11.3", features = ["x509-parser", "pem"] }
rsa = "0.9.2"
time = "0.3.30"
whoami = { version = "1.4.1", default-features = false }
